syntax = "proto3";

option go_package = "aresdata/api/v1;v1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// VideoRank 提供榜单视频排名查询服务
service VideoRank {
	// 查询单个视频榜单信息
	rpc GetVideoRank(VideoRankQueryRequest) returns (VideoRankQueryResponse){
		option (google.api.http) = {
			get: "/v1/video_rank"
		};
	};
	// 批量查询视频榜单信息
	rpc BatchGetVideoRank(BatchVideoRankQueryRequest) returns (BatchVideoRankQueryResponse){
		option (google.api.http) = {
			get: "/v1/video_rank/List"
		};
	};
}

// VideoRank 查询请求参数
message VideoRankQueryRequest {
	string aweme_id = 1;           // 视频唯一ID
	string rank_type = 2;          // 排名类型，例如"hot", "view", "like"
	string rank_date = 3;          // 排名日期，格式如"2025-07-16"
}

// VideoRank 查询响应
message VideoRankQueryResponse {
	VideoRankDTO rank = 1;            // 视频榜单信息
}

// 批量查询请求
message BatchVideoRankQueryRequest {
	repeated string aweme_ids = 1; // 批量视频ID
	string rank_type = 2;          // 排名类型
	string rank_date = 3;          // 排名日期
}

// 批量查询响应
message BatchVideoRankQueryResponse {
	repeated VideoRankDTO ranks = 1;  // 批量视频榜单信息
}

// 榜单视频榜结构
message VideoRankDTO {
	int64 id = 1;
	google.protobuf.Timestamp created_at = 2;

	// 榜单核心
	int32 rank_num = 3;
	string period_type = 4;
	string rank_date = 5;
	string start_date = 6;
	string end_date = 7;

	// 视频信息
	string aweme_id = 8;
	string aweme_cover_url = 9;
	string aweme_desc = 10;
	google.protobuf.Timestamp aweme_pub_time = 11;
	string aweme_share_url = 12;
	string duration_str = 13;
	string aweme_score_str = 14;

	// 商品信息
	string goods_id = 15;
	string goods_title = 16;
	string goods_cover_url = 17;
	string goods_price_range = 18;
	double goods_price = 19;
	string cos_ratio = 20;
	string commission_price = 21;
	string shop_name = 22;
	string brand_name = 23;
	string category_names = 24;

	// 博主信息
	int32 blogger_id = 25;
	string blogger_uid = 26;
	string blogger_name = 27;
	string blogger_avatar = 28;
	int32 blogger_fans_num = 29;
	string blogger_tag = 30;

	// 榜单统计
	string sales_count_str = 31;
	string total_sales_str = 32;
	string like_count_inc_str = 33;
	string play_count_inc_str = 34;

	// 元数据
	string raw_json = 35;
}
